# DisCoConnect

./: .gitignore  LICENSE  README.md  category_algorithms.py  example.py  example_diagrams.py  main.py  metagraph_algorithms.py  pyproject.toml  pytest.ini  random_category_generator.py  requirements.txt  unit_tests_mgtoolkit.py
.github/workflows/: ci.yml
categories/: category1.py  util.py
discoconnect/: computation.py  maps.py  util.py
docs/: developer.md  index.md
docs/api/: discoconnect.html  index.html  mgtoolkit.html  search.js
docs/api/discoconnect/: computation.html  maps.html  util.html
docs/api/mgtoolkit/: enums.html  exception.html  library.html  mgtoolkit.html  properties.html
mgtoolkit/: CHANGES.md  library.py  pyvenv.cfg
tests/: conftest.py  test_computation.py  test_edge_cases.py  test_maps.py  test_properties.py
